Classe Key dédiée

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" src="js/component/Player.js"></script>
     <script type="text/javascript" src="js/component/Enemy.js"></script>
+    <script type="text/javascript" src="js/component/Key.js"></script>
     <script type="text/javascript" src="js/component/Level.js"></script>
 
     <script type="text/javascript" src="js/state/load.js"></script>
