Réorganisation des states avec ajout d'un boot et d'un leveManager

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 	<title>Super fantome</title>
 	<script type="text/javascript" src="js/vendors/phaser/phaser.min.js"></script>
 
+    <script type="text/javascript" src="js/component/Level.js"></script>
     <script type="text/javascript" src="js/component/Player.js"></script>
     <script type="text/javascript" src="js/component/Enemy.js"></script>
     <script type="text/javascript" src="js/component/Key.js"></script>
-    <script type="text/javascript" src="js/component/Level.js"></script>
 
+    <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/load.js"></script>
     <script type="text/javascript" src="js/state/menu.js"></script>
+    <script type="text/javascript" src="js/state/levelManager.js"></script>
     <script type="text/javascript" src="js/state/play.js"></script>
 
     <script type="text/javascript" src="js/game.js"></script>
