--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/component/Player.js"></script>
     <script type="text/javascript" src="js/component/Enemy.js"></script>
     <script type="text/javascript" src="js/component/Key.js"></script>
+    <script type="text/javascript" src="js/component/Lock.js"></script>
 
     <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/load.js"></script>
