Correction titre du jeu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head> 
 	<meta charset="UTF-8" />
-	<title>Super fantome</title>
+	<title>Super fantôme</title>
 	<script type="text/javascript" src="js/vendors/phaser/phaser.min.js"></script>
 
     <script type="text/javascript" src="js/component/Level.js"></script>
