--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>Super fantôme</title>
+
+    <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="HandheldFriendly" content="true" />
+
 	<script type="text/javascript" src="js/vendors/phaser/phaser.min.js"></script>
 
     <script type="text/javascript" src="js/component/Level.js"></script>
