[+] End of the game

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <script type="text/javascript" src="js/component/Player.js"></script>
     <script type="text/javascript" src="js/component/Enemy.js"></script>
     <script type="text/javascript" src="js/component/Key.js"></script>
+    <script type="text/javascript" src="js/component/Extra.js"></script>
     <script type="text/javascript" src="js/component/Lock.js"></script>
 
     <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/menu.js"></script>
     <script type="text/javascript" src="js/state/levelManager.js"></script>
     <script type="text/javascript" src="js/state/play.js"></script>
+    <script type="text/javascript" src="js/state/end.js"></script>
 
     <script type="text/javascript" src="js/game.js"></script>
     <style type="text/css">
