--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="js/component/Extra.js"></script>
     <script type="text/javascript" src="js/component/Lock.js"></script>
 
+    <script type="text/javascript" src="js/helper/EnemyGroup.js"></script>
+
     <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/menu.js"></script>
     <script type="text/javascript" src="js/state/levelManager.js"></script>
