[*] v1.0-RC6, links at the bottom, align center

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
         }
 
         .widget_clean_box_social_icons {
+            display: none;
             text-align: center;
+        }
+
+        @media (min-width: 768px) {
+            .widget_clean_box_social_icons {
+                display: block;
+            }
         }
     </style>
 </head>
