[*] v1.0-RC6, links at the bottom, align center

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         .site {
             margin-top: 0px;
             padding-top: 0px;
-            width: 1230px;
         }
 
         .site-title {
@@ -51,6 +50,10 @@
         }
 
         @media (min-width: 768px) {
+            .site {
+                width: 1230px;
+            }
+
             .widget_clean_box_social_icons {
                 display: block;
             }
