[*] New Github link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="widget-wrap">
             <a class="genericon_parent genericon genericon-wordpress" target="_blank" title="WordPress" href="http://sf.zone-5.net"><span class="screen-reader-text">WordPress</span> </a>
             <a class="genericon_parent genericon genericon-twitter" target="_blank" title="Twitter" href="https://twitter.com/nicofisch5"><span class="screen-reader-text">Twitter</span> </a>
-            <a class="genericon_parent genericon genericon-github" target="_blank" title="GitHub" href="https://github.com/nicofisch5"><span class="screen-reader-text">GitHub</span> </a>
+            <a class="genericon_parent genericon genericon-github" target="_blank" title="GitHub" href="https://github.com/nicofisch5/super-fantome"><span class="screen-reader-text">GitHub</span> </a>
             <a class="genericon_parent genericon genericon-linkedin" target="_blank" title="LinkedIn" href="https://fr.linkedin.com/in/nicofischer"><span class="screen-reader-text">LinkedIn</span> </a>
         </div>
     </section>
