[*] Link 'How to play' with target=_blank

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div id="super-fantome"></div>
 
     <section class="widget_clean_box_social_icons" id="header-social-icons">
-        <p class="site-title"><a href="http://sf.zone-5.net/how-to-play/">How to play</a></p>
+        <p class="site-title"><a target="_blank" href="http://sf.zone-5.net/how-to-play/">How to play</a></p>
         <div class="widget-wrap">
             <a class="genericon_parent genericon genericon-wordpress" target="_blank" title="WordPress" href="http://sf.zone-5.net"><span class="screen-reader-text">WordPress</span> </a>
             <a class="genericon_parent genericon genericon-twitter" target="_blank" title="Twitter" href="https://twitter.com/nicofisch5"><span class="screen-reader-text">Twitter</span> </a>
