[*] HUD better implementation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     <script type="text/javascript" src="js/component/Lock.js"></script>
 
     <script type="text/javascript" src="js/helper/EnemyGroup.js"></script>
+    <script type="text/javascript" src="js/helper/HUD.js"></script>
+    <script type="text/javascript" src="js/helper/HUDTextText.js"></script>
+    <script type="text/javascript" src="js/helper/HUDImageText.js"></script>
 
     <script type="text/javascript" src="js/state/boot.js"></script>
+    <script type="text/javascript" src="js/state/preloader.js"></script>
     <script type="text/javascript" src="js/state/menu.js"></script>
     <script type="text/javascript" src="js/state/levelManager.js"></script>
     <script type="text/javascript" src="js/state/play.js"></script>
