--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<script type="text/javascript" src="js/vendors/phaser/phaser.min.js"></script>
 
     <script type="text/javascript" src="js/component/Level.js"></script>
+    <script type="text/javascript" src="js/component/LevelBoss.js"></script>
+    <script type="text/javascript" src="js/component/LevelClassic.js"></script>
     <script type="text/javascript" src="js/component/Player.js"></script>
     <script type="text/javascript" src="js/component/Enemy.js"></script>
     <script type="text/javascript" src="js/component/Key.js"></script>
@@ -22,6 +24,7 @@
     <script type="text/javascript" src="js/helper/HUD.js"></script>
     <script type="text/javascript" src="js/helper/HUDTextText.js"></script>
     <script type="text/javascript" src="js/helper/HUDImageText.js"></script>
+    <script type="text/javascript" src="js/helper/LevelFactory.js"></script>
 
     <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/preloader.js"></script>
