[+] playState is now managed by a factory

--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     <script type="text/javascript" src="js/helper/HUDTextText.js"></script>
     <script type="text/javascript" src="js/helper/HUDImageText.js"></script>
     <script type="text/javascript" src="js/helper/LevelFactory.js"></script>
+    <script type="text/javascript" src="js/helper/PlayStateFactory.js"></script>
 
     <script type="text/javascript" src="js/state/boot.js"></script>
     <script type="text/javascript" src="js/state/preloader.js"></script>
     <script type="text/javascript" src="js/state/menu.js"></script>
     <script type="text/javascript" src="js/state/levelManager.js"></script>
     <script type="text/javascript" src="js/state/play.js"></script>
+    <script type="text/javascript" src="js/state/playClassic.js"></script>
+    <script type="text/javascript" src="js/state/playBoss.js"></script>
     <script type="text/javascript" src="js/state/end.js"></script>
 
     <script type="text/javascript" src="js/game.js"></script>
